--- a/01-ecommerce/css/app.css
+++ b/01-ecommerce/css/app.css
@@ -15,9 +15,9 @@ a {
 }
 
 .contenedor {
+    width: 90%;
     max-width: 1200px;
     margin: 0 auto;
-    width: 90%;
 }
 
 /* Header y Navegation */
@@ -37,9 +37,12 @@ a {
 
 .nav-principal {
     padding: 20px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.hero{
+.hero {
     background-image: url('../img/principal.jpg');
     background-repeat: no-repeat;
     background-size: cover;
