adding categorias styles, img, body and h1,h2,h3 global classes

--- a/01-ecommerce/css/app.css
+++ b/01-ecommerce/css/app.css
@@ -9,9 +9,24 @@ html {
 }
 
 /* Global Styles*/
+body {
+    font-family: "Raleway", sans-serif;
+}
+
+h1,
+h2,
+h3 {
+    font-family: "Playfair", serif;
+}
+
 a {
     text-decoration: none;
     color: black;
+}
+
+img {
+    max-width: 100%;
+    display: block;
 }
 
 .contenedor {
@@ -47,4 +62,28 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     height: 550px;
+}
+
+.categorias h2 {
+    text-align: center;
+}
+
+.categoria a {
+    display: block;
+    text-align: center;
+    padding: 20px;
+    font-size: 20px;
+}
+
+.categoria a:hover {
+    background-color: #037bc0;
+    color: white;
+    transition: background-color .3s ease;
+    border-bottom-right-radius: 10px;
+}
+
+.listado-categorias {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
