--- a/01-ecommerce/css/app.css
+++ b/01-ecommerce/css/app.css
@@ -1,5 +1,7 @@
 html {
     box-sizing: border-box;
+    font-size: 62.5%;
+    /* 1rem = 10px */
 }
 
 *,
@@ -11,12 +13,27 @@ html {
 /* Global Styles*/
 body {
     font-family: "Raleway", sans-serif;
+    font-size: 1.6rem;
+    line-height: 2;
 }
 
 h1,
 h2,
 h3 {
     font-family: "Playfair", serif;
+    margin: 0 0 5rem 0;
+}
+
+h1 {
+    font-size: 5rem;
+}
+
+h2 {
+    font-size: 4rem;
+}
+
+h3 {
+    font-size: 3rem;
 }
 
 a {
@@ -31,14 +48,14 @@ img {
 
 .contenedor {
     width: 90%;
-    max-width: 1200px;
+    max-width: 120rem;
     margin: 0 auto;
 }
 
 /* Header y Navegation */
+
 .nombre-sitio {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 5rem;
     text-align: center;
 }
 
@@ -51,7 +68,7 @@ img {
 }
 
 .nav-principal {
-    padding: 20px 0;
+    padding: 2rem 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -61,7 +78,12 @@ img {
     background-image: url('../img/principal.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 550px;
+    background-position: center center;
+    height: 55rem;
+}
+
+.categorias {
+    padding-top: 5rem;
 }
 
 .categorias h2 {
@@ -71,19 +93,19 @@ img {
 .categoria a {
     display: block;
     text-align: center;
-    padding: 20px;
-    font-size: 20px;
+    padding: 2rem;
+    font-size: 2rem;
 }
 
 .categoria a:hover {
     background-color: #037bc0;
     color: white;
     transition: background-color .3s ease;
-    border-bottom-right-radius: 10px;
+    border-bottom-right-radius: 1rem;
 }
 
 .listado-categorias {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 2rem;
 }
