--- a/03-cssgrid-basicos/css/style.css
+++ b/03-cssgrid-basicos/css/style.css
@@ -80,3 +80,13 @@ h2 {
 .grid-2 .box:nth-child(2) {
     grid-column: 1 / 2;
 }
+
+/* grid row definition */
+.grid-3 {
+    display: grid;
+    grid-template-rows: repeat(6, 300px);
+}
+
+.grid-3 .box:nth-child(2) {
+    grid-row: 1 / 2;
+}
