--- a/03-cssgrid-basicos/css/style.css
+++ b/03-cssgrid-basicos/css/style.css
@@ -109,3 +109,14 @@ h2 {
     display: grid;
     grid: repeat(2, 300px) / repeat(3, 300px);
 }
+
+/* grid autflow */
+.grid-6 {
+    display: grid;
+    grid: repeat(2, 1fr) / repeat(3, 1fr);
+    grid-auto-flow: dense;
+}
+
+.grid-6 .box:nth-child(2) {
+    grid-column: 1 / 2;
+}
