--- a/03-cssgrid-basicos/css/style.css
+++ b/03-cssgrid-basicos/css/style.css
@@ -120,3 +120,10 @@ h2 {
 .grid-6 .box:nth-child(2) {
     grid-column: 1 / 2;
 }
+
+
+/* grid repeat */
+.grid-7 {
+    display: grid;
+    grid-template-columns: 2fr repeat(2, 1fr);
+}
