--- a/03-cssgrid-basicos/css/style.css
+++ b/03-cssgrid-basicos/css/style.css
@@ -127,3 +127,53 @@ h2 {
     display: grid;
     grid-template-columns: 2fr repeat(2, 1fr);
 }
+
+/* grid gap propertie */
+.grid-8 {
+    display: grid;
+    grid: repeat(2, 40rem) / 2fr repeat(2, 1fr);
+    gap: 2rem 5rem;
+}
+
+.grid-8 .box {
+    margin: 0;
+}
+
+/* grid areas */
+.grid-9 {
+    display: grid;
+    height: 120rem;
+    grid-template-areas:
+        "header header header"
+        "nav nav nav"
+        "contenido contenido sidebar"
+        "footer footer footer";
+
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 2.5fr 1fr 6fr 2.5fr;
+    gap: 4rem;
+}
+
+.grid-9 .box {
+    margin: 0;
+}
+
+.grid-9 .box:nth-child(1) {
+    grid-area: header;
+}
+
+.grid-9 .box:nth-child(2) {
+    grid-area: nav;
+}
+
+.grid-9 .box:nth-child(3) {
+    grid-area: contenido;
+}
+
+.grid-9 .box:nth-child(4) {
+    grid-area: sidebar;
+}
+
+.grid-9 .box:nth-child(5) {
+    grid-area: footer;
+}
